common-applications/freesky-icsl-hk-cluster/xihe-test-v2/internal-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xihe-ingress
  namespace: xihe-test-v2
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
  - host: xihe-internal-server.test.osinfra.cn
    http:
      paths:
      - backend:
          service:
            name: service-internal-server
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - xihe-internal-server.test.osinfra.cn
    secretName: xihe-new-tls
